Fix missing Pattern.asMatchPredicate(...) in JDK8
Signed-off-by: Peter Nied <petern@amazon.com>